# blockcampus

./: Cargo.toml
src/: main.rs
svelte/src/: App.svelte
templates/: index.html  root.html
templates/account/: link.html  register.html  sent_email.html
