[package]
name = "blockcampus"
version = "0.1.0"
authors = ["Nikhil Jha <hi@nikhiljha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.5.0"
serde = "1.0.116"
lettre = "0.9.3"
actix-files = "0.3.0"
